fix(sticky-footer): layout issue with localized content
extend width approach

--- a/express/blocks/sticky-footer/sticky-footer.css
+++ b/express/blocks/sticky-footer/sticky-footer.css
@@ -11,7 +11,8 @@ main .sticky-footer-wrapper {
 
 main .sticky-footer {
     background: var(--gradient-highlight-diagonal);
-    width: 500px;
+    width: max-content;
+    max-width: 100%;
     box-sizing: border-box;
     margin: 32px auto;
     padding: 32px;
@@ -37,10 +38,6 @@ main .sticky-footer>div>div {
     text-align: left;
 }
 
-main .sticky-footer>div>div:nth-of-type(2) {
-    max-width: 277px;
-}
-
 main .sticky-footer>div p {
     margin: 0;
     display: flex;
@@ -50,7 +47,7 @@ main .sticky-footer>div p {
 main .sticky-footer picture img {
     display: block;
     height: 147px;
-    width: 147px;
+    min-width: 147px;
 }
 
 main .sticky-footer>div p em {
